--- a/index.html
+++ b/index.html
@@ -743,19 +743,23 @@ details for loans from other banks, and track refinancing
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="pricing-item">
               <h3>Basic Plan</h3>
-              <h4><sup>$</sup>12000 </h4>
+              <h4><sup>$</sup>18000 </h4>
               <ul>
                 <li><i class="bi bi-check"></i> <span>User Dashboard</span></li>				 
                 <li><i class="bi bi-check"></i> <span>Basic Setting</span></li>
                 <li><i class="bi bi-check"></i> <span>Pledge Module</span></li>
-               <li><i class="bi bi-check"></i><span> Pledge Statement</span></li>
-                <li class="na"><i class="bi bi-x"></i> <span>Receipt Details</span></li>
-				<li class="na"><i class="bi bi-x"></i> <span>Repledge Loan Details</span></li>				
-				 <li class="na"><i class="bi bi-x"></i> <span>Admin Dashboard</span></li>
+               <li><i class="bi bi-check"></i><span> Pledge Statement</span></li>			   
+				<li class="na"><i class="bi bi-check"></i> <span>Repledge Loan Details</span></li>							
+				 <li class="na"><i class="bi bi-check"></i> <span>Admin Dashboard</span></li>
+                <li class="na"><i class="bi bi-x"></i> <span>Receipt Details</span></li>	
                 <li class="na"><i class="bi bi-x"></i> <span>Manage Depositor Details</span></li>				
                 <li class="na"><i class="bi bi-x"></i> <span>Accounting Statement</span></li>
-                <li class="na"><i class="bi bi-x"></i> <span>Finance Statement</span></li>
-				
+                <li class="na"><i class="bi bi-x"></i> <span>Finance Statement</span></li>							
+				<li><i class="bi bi-x"></i> <span>Track Pledgewise Profit</span></li>				
+				 <li><i class="bi bi-x"></i> <span>Manage Partpayment/ Release Note</span></li>
+                <li><i class="bi bi-x"></i> <span>Manage Voucher Details</span></li>				
+                <li><i class="bi bi-x"></i><span>Silver Details</span></li>
+                 <li><i class="bi bi-x"></i> <span>Online Deployment</span></li> 
               </ul>
               <a href="#" class="buy-btn">Buy Now</a>
             </div>
@@ -764,17 +768,21 @@ details for loans from other banks, and track refinancing
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="pricing-item featured">
               <h3>Statndard Plan</h3>
-              <h4><sup>$</sup>18000<span>  </span></h4>
-              <ul> <li><i class="bi bi-check"></i> <span>User Dashboard</span></li>	
-                <li><i class="bi bi-check"></i> <span>Basic Setting</span></li>
+              <h4><sup>$</sup>25000<span>  </span></h4>
+              <ul> <li><i class="bi bi-check"></i> <span>User Dashboard</span></li>	 
                 <li><i class="bi bi-check"></i> <span>Pledge Module</span></li>
                <li><i class="bi bi-check"></i><span> Pledge Statement</span></li>
                 <li><i class="bi bi-check"></i> <span>Receipt Details</span></li>
 				<li><i class="bi bi-check"></i> <span>Repledge Loan Details</span></li>				
-				 <li class="na"><i class="bi bi-x"></i> <span>Admin Dashboard</span></li>
-                <li class="na"><i class="bi bi-x"></i> <span>Manage Depositor Details</span></li>				
-                <li class="na"><i class="bi bi-x"></i> <span>Accounting Statement</span></li>
-                <li class="na"><i class="bi bi-x"></i> <span>Finance Statement</span></li>
+				 <li class="na"><i class="bi bi-check"></i> <span>Admin Dashboard</span></li>
+                <li class="na"><i class="bi bi-check"></i> <span>Manage Depositor Details</span></li>				
+                <li class="na"><i class="bi bi-check"></i> <span>Accounting Statement</span></li>
+                <li class="na"><i class="bi bi-check"></i> <span>Finance Statement</span></li>				
+				<li><i class="bi bi-x"></i> <span>Track Pledgewise Profit</span></li>				
+				 <li><i class="bi bi-x"></i> <span>Manage Partpayment/ Release Note</span></li>
+                <li><i class="bi bi-x"></i> <span>Manage Voucher Details</span></li>				
+                <li><i class="bi bi-x"></i><span>Silver Details</span></li>
+                 <li><i class="bi bi-x"></i> <span>Online Deployment</span></li> 
               </ul>
               <a href="#" class="buy-btn">Buy Now</a>
             </div>
@@ -783,7 +791,7 @@ details for loans from other banks, and track refinancing
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="pricing-item">
               <h3>Pro Plan</h3>
-              <h4><sup>$</sup>25000<span> </span></h4>
+              <h4><sup>$</sup>35000<span> </span></h4>
               <ul> <li><i class="bi bi-check"></i> <span>User Dashboard</span></li>	
                          <li><i class="bi bi-check"></i> <span>Basic Setting</span></li>
                 <li><i class="bi bi-check"></i> <span>Pledge Module</span></li>
@@ -793,7 +801,12 @@ details for loans from other banks, and track refinancing
 				 <li><i class="bi bi-check"></i> <span>Admin Dashboard</span></li>
                 <li><i class="bi bi-check"></i> <span>Manage Depositor Details</span></li>				
                 <li><i class="bi bi-check"></i><span>Accounting Statement</span></li>
-                 <li><i class="bi bi-check"></i> <span>Finance Statement</span></li> 
+                 <li><i class="bi bi-check"></i> <span>Finance Statement</span></li>  
+				<li><i class="bi bi-check"></i> <span>Track Pledgewise Profit</span></li>				
+				 <li><i class="bi bi-check"></i> <span>Manage Partpayment/ Release Note</span></li>
+                <li><i class="bi bi-check"></i> <span>Manage Voucher Details</span></li>				
+                <li><i class="bi bi-check"></i><span>Silver Details</span></li>
+                 <li><i class="bi bi-check"></i> <span>Online Deployment</span></li> 
               </ul>
               <a href="#" class="buy-btn">Buy Now</a>
             </div>
