--- a/index.html
+++ b/index.html
@@ -755,11 +755,11 @@ details for loans from other banks, and track refinancing
                 <li class="na"><i class="bi bi-x"></i> <span>Manage Depositor Details</span></li>				
                 <li class="na"><i class="bi bi-x"></i> <span>Accounting Statement</span></li>
                 <li class="na"><i class="bi bi-x"></i> <span>Finance Statement</span></li>							
-				<li><i class="bi bi-x"></i> <span>Track Pledgewise Profit</span></li>				
-				 <li><i class="bi bi-x"></i> <span>Manage Partpayment/ Release Note</span></li>
-                <li><i class="bi bi-x"></i> <span>Manage Voucher Details</span></li>				
-                <li><i class="bi bi-x"></i><span>Silver Details</span></li>
-                 <li><i class="bi bi-x"></i> <span>Online Deployment</span></li> 
+				<li class="na"><i class="bi bi-x"></i> <span>Track Pledgewise Profit</span></li>				
+				 <li class="na"><i class="bi bi-x"></i> <span>Manage Partpayment/ Release Note</span></li>
+                <li class="na"><i class="bi bi-x"></i> <span>Manage Voucher Details</span></li>				
+                <li class="na"><i class="bi bi-x"></i><span>Silver Details</span></li>
+                 <li class="na"><i class="bi bi-x"></i> <span>Online Deployment</span></li> 
               </ul>
               <a href="#" class="buy-btn">Buy Now</a>
             </div>
@@ -774,15 +774,15 @@ details for loans from other banks, and track refinancing
                <li><i class="bi bi-check"></i><span> Pledge Statement</span></li>
                 <li><i class="bi bi-check"></i> <span>Receipt Details</span></li>
 				<li><i class="bi bi-check"></i> <span>Repledge Loan Details</span></li>				
-				 <li class="na"><i class="bi bi-check"></i> <span>Admin Dashboard</span></li>
-                <li class="na"><i class="bi bi-check"></i> <span>Manage Depositor Details</span></li>				
-                <li class="na"><i class="bi bi-check"></i> <span>Accounting Statement</span></li>
-                <li class="na"><i class="bi bi-check"></i> <span>Finance Statement</span></li>				
-				<li><i class="bi bi-x"></i> <span>Track Pledgewise Profit</span></li>				
-				 <li><i class="bi bi-x"></i> <span>Manage Partpayment/ Release Note</span></li>
-                <li><i class="bi bi-x"></i> <span>Manage Voucher Details</span></li>				
-                <li><i class="bi bi-x"></i><span>Silver Details</span></li>
-                 <li><i class="bi bi-x"></i> <span>Online Deployment</span></li> 
+				 <li><i class="bi bi-check"></i> <span>Admin Dashboard</span></li>
+                <li><i class="bi bi-check"></i> <span>Manage Depositor Details</span></li>				
+                <li><i class="bi bi-check"></i> <span>Accounting Statement</span></li>
+                <li><i class="bi bi-check"></i> <span>Finance Statement</span></li>				
+				<li  class="na"><i class="bi bi-x"></i> <span>Track Pledgewise Profit</span></li>				
+				 <li class="na"><i class="bi bi-x"></i> <span>Manage Partpayment/ Release Note</span></li>
+                <li class="na"><i class="bi bi-x"></i> <span>Manage Voucher Details</span></li>				
+                <li class="na"><i class="bi bi-x"></i><span>Silver Details</span></li>
+                 <li class="na"><i class="bi bi-x"></i> <span>Online Deployment</span></li> 
               </ul>
               <a href="#" class="buy-btn">Buy Now</a>
             </div>
