Include Denomination details

--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@ details for loans from other banks, and track refinancing
 				 <li class="na"><i class="bi bi-x"></i> <span>Manage Partpayment/ Release Note</span></li>
                 <li class="na"><i class="bi bi-x"></i> <span>Manage Voucher Details</span></li>				
                 <li class="na"><i class="bi bi-x"></i><span>Silver Details</span></li>
-                 <li class="na"><i class="bi bi-x"></i> <span>Online Deployment</span></li> 
+                 <li class="na"><i class="bi bi-x"></i> <span>Denomination Details</span></li> 
               </ul>
               <a href="#" class="buy-btn">Buy Now</a>
             </div>
@@ -782,7 +782,7 @@ details for loans from other banks, and track refinancing
 				 <li class="na"><i class="bi bi-x"></i> <span>Manage Partpayment/ Release Note</span></li>
                 <li class="na"><i class="bi bi-x"></i> <span>Manage Voucher Details</span></li>				
                 <li class="na"><i class="bi bi-x"></i><span>Silver Details</span></li>
-                 <li class="na"><i class="bi bi-x"></i> <span>Online Deployment</span></li> 
+                 <li class="na"><i class="bi bi-x"></i> <span>Denomination Details</span></li> 
               </ul>
               <a href="#" class="buy-btn">Buy Now</a>
             </div>
@@ -805,7 +805,7 @@ details for loans from other banks, and track refinancing
 				 <li><i class="bi bi-check"></i> <span>Manage Partpayment/ Release Note</span></li>
                 <li><i class="bi bi-check"></i> <span>Manage Voucher Details</span></li>				
                 <li><i class="bi bi-check"></i><span>Silver Details</span></li>
-                 <li><i class="bi bi-check"></i> <span>Online Deployment</span></li> 
+                 <li><i class="bi bi-check"></i> <span>Denomination Details</span></li> 
               </ul>
               <a href="#" class="buy-btn">Buy Now</a>
             </div>
