--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@ details for loans from other banks, and track refinancing
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="pricing-item">
               <h3>Basic Plan</h3>
-              <h4><sup>$</sup>18000 </h4>
+              <h4><sup>&#8377;</sup>18000 </h4>
               <ul>
                 <li><i class="bi bi-check"></i> <span>User Dashboard</span></li>				 
                 <li><i class="bi bi-check"></i> <span>Basic Setting</span></li>
@@ -768,7 +768,7 @@ details for loans from other banks, and track refinancing
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="pricing-item featured">
               <h3>Statndard Plan</h3>
-              <h4><sup>$</sup>25000<span>  </span></h4>
+              <h4><sup>&#8377;</sup>25000<span>  </span></h4>
               <ul> <li><i class="bi bi-check"></i> <span>User Dashboard</span></li>	 
                 <li><i class="bi bi-check"></i> <span>Pledge Module</span></li>
                <li><i class="bi bi-check"></i><span> Pledge Statement</span></li>
@@ -791,7 +791,7 @@ details for loans from other banks, and track refinancing
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="pricing-item">
               <h3>Pro Plan</h3>
-              <h4><sup>$</sup>35000<span> </span></h4>
+              <h4><sup>&#8377;</sup>35000<span> </span></h4>
               <ul> <li><i class="bi bi-check"></i> <span>User Dashboard</span></li>	 
                 <li><i class="bi bi-check"></i> <span>Pledge Module</span></li>
                <li><i class="bi bi-check"></i><span> Pledge Statement</span></li>
